--- a/public/index.html
+++ b/public/index.html
@@ -9,8 +9,8 @@
       rel="stylesheet"
       href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.1/css/all.min.css"
     />
-    <meta name="description" content="dVoting App" />
-    <title>Voting App</title>
+    <meta name="description" content="PolyVote" />
+    <title>PolyVote</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
